<resources>
    <string name="app_name" translatable="false">HomeAppDemo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_demo_name">Home Monitor</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="logo_subtext">Take control of your home devices\n from anywhere</string>
    <string name="empty_device_text">You currently have no device, click here \nto add new device</string>
    <string name="empty_user_text">Click here to create a new user account</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="change_language">Change Language</string>
    <string name="delete_my_devices">Delete my devices</string>
    <string name="clear_data">Clear app data</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="city">City</string>
    <string name="city_">City:</string>

    <string name="street">Street</string>
    <string name="street_">Street</string>

    <string name="country">Country</string>
    <string name="country_">Country:</string>

    <string name="date_of_birth">Date of Birth</string>
    <string name="date_of_birth_">Date of Birth:</string>

    <string name="postal_code">Postal code</string>
    <string name="street_code">Street code</string>
    <string name="create_user">Create User</string>
    <string name="next">Select</string>
    <string name="error">Error</string>
    <string name="birth_date">Choose Birthdate</string>
    <string name="update_account">Update Account</string>
    <string name="account_details">Account Details</string>
    <string name="account_name">Account Name:</string>
    <string name="street_address">Street Address:</string>
    <string name="number_of_devices">Number of devices:</string>
    <string name="rollershutters_">RollerShutters:</string>
    <string name="heaters_">Heaters:</string>
    <string name="light_">Light:</string>
    <string name="successful">Successful</string>
    <string name="account_created">Account has successfully been created</string>
    <string name="account_updated">Account has successfully been updated</string>
    <string name="account_deleted">Account has successfully been deleted</string>
    <string name="devices_deleted">All devices have successfully been deleted</string>
    <string name="app_reset">Application has been reset. All data has been cleared</string>
    <string name="no_device">You have no device</string>
    <string name="no_account">You have no account</string>
    <string name="are_you">Are you sure?</string>
    <string name="are_you_language">Are you sure you want to change app Language?</string>
    <string name="are_you_sure">Are you sure you want to clear app data?</string>
    <string name="are_you_sure_account">Are you sure you want to delete your account?</string>
    <string name="are_you_sure_device">Are you sure you want to delete all devices?</string>
    <string name="fields_required">All fields are required. Please fill.</string>
    <string name="swipe_to_refresh">Swipe to refresh</string>
    <string name="choose_device_type">Choose Device Type</string>
    <string name="create_new_light">New Light Device</string>
    <string name="create_new_heater">New Heater Device</string>
    <string name="create_new_rollershutters">New roller shutter Device</string>
    <string name="create_account">Create Account</string>
    <string name="create_account_device">You have not created account. Create account to add a device</string>

    <string name="create_device">Create device</string>
    <string name="set_device_mode">Set Device Mode:</string>
    <string name="heater_name">Enter heater Name</string>
    <string name="light_name">Enter light name</string>
    <string name="shutters_name">Enter rollershutter name</string>
    <string name="set_temperature">Set Temperature Level</string>
    <string name="set_intensity_level">Set Intensity Level</string>
    <string name="set_position">Set Position</string>
    <string name="temperature_level">Temperature Level</string>
    <string name="current_position">Current Position</string>
    <string name="temperature_must_not">Minimum temperature level is 7. Kindly set temperature to 7 or above.</string>
    <string name="bedroom_light">Bedroom Light</string>
    <string name="mode">Mode:</string>
    <string name="intensity">Intensity:</string>
    <string name="temperature">Temperature:</string>
    <string name="position">Position:</string>
    <string name="mode_off">Mode: OFF</string>
    <string name="intensity_50">Intensity: 50</string>
    <string name="my_devices">Here are your devices</string>
    <string name="add_new_device">Add new device</string>
    <string name="sort_by">Sort by</string>
    <string name="light">Lights</string>
    <string name="heaters">Heaters</string>
    <string name="shutters">Roller shutters</string>
    <string name="show_all_devices">Show all devices</string>
    <string name="update_device">Update device</string>
    <string name="edit_device">Edit Device</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="cancel">Cancel</string>
    <string name="cont">Continue</string>
</resources>