<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.profile.UserProfileFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emptyContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <ImageView
            android:id="@+id/ivEmptyState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4dp"
            android:gravity="center"
            android:text="@string/empty_user_text"
            app:layout_constraintEnd_toEndOf="@+id/ivEmptyState"
            app:layout_constraintStart_toStartOf="@+id/ivEmptyState"
            app:layout_constraintTop_toBottomOf="@+id/ivEmptyState" />

        <Button
            android:id="@+id/btnCreateNewUser"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/space_transparent"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/ivEmptyState" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupEmptyState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="btnCreateNewUser,textView3,ivEmptyState" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdateUser"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height2"
            android:layout_marginStart="@dimen/_32dp"
            android:layout_marginEnd="@dimen/_32dp"
            android:layout_marginBottom="@dimen/_32dp"
            android:text="@string/update_account"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/_4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLightCount" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24dp"
            android:text="@string/account_details"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_32dp"
            android:layout_marginTop="@dimen/_45dp"
            android:text="@string/account_name"
            android:textAllCaps="true"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/txtAccountName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="TextView"
            android:textAlignment="viewEnd"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginStart="@dimen/_32dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_32dp"
            android:src="@drawable/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/street_address"
            android:textAllCaps="true"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/txtAccountName" />

        <TextView
            android:id="@+id/txtAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="TextView"
            android:textAlignment="viewEnd"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="@+id/txtAccountName"
            app:layout_constraintStart_toStartOf="@+id/guideline3" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/city_"
            android:textAllCaps="true"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/txtAddress" />

        <TextView
            android:id="@+id/txtCity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="TextView"
            android:textAlignment="viewEnd"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="@+id/txtAddress"
            app:layout_constraintStart_toStartOf="@+id/guideline3" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/country_"
            android:textAllCaps="true"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/txtCity" />

        <TextView
            android:id="@+id/txtCountry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="TextView"
            android:textAlignment="viewEnd"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="@+id/txtCity"
            app:layout_constraintStart_toStartOf="@+id/guideline3" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/date_of_birth_"
            android:textAllCaps="true"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/txtCountry" />

        <TextView
            android:id="@+id/txtDateOfBirth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="TextView"
            android:textAlignment="viewEnd"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
            app:layout_constraintEnd_toEndOf="@+id/txtCountry"
            app:layout_constraintStart_toStartOf="@+id/guideline3" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/number_of_devices"
            android:textAllCaps="true"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/txtDateOfBirth" />

        <TextView
            android:id="@+id/txtDeviceCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="0"
            android:textAlignment="viewEnd"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView15"
            app:layout_constraintEnd_toEndOf="@+id/txtDateOfBirth"
            app:layout_constraintStart_toStartOf="@+id/guideline3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="155dp" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/rollershutters_"
            android:textAllCaps="true"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/txtDeviceCount" />

        <TextView
            android:id="@+id/txtRollerShuttersCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="0"
            android:textAlignment="viewEnd"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView17"
            app:layout_constraintEnd_toEndOf="@+id/txtDeviceCount"
            app:layout_constraintStart_toStartOf="@+id/guideline3" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/heaters_"
            android:textAllCaps="true"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/txtRollerShuttersCount" />

        <TextView
            android:id="@+id/txtHeatersCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="0"
            android:textAlignment="viewEnd"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView19"
            app:layout_constraintEnd_toEndOf="@+id/txtRollerShuttersCount"
            app:layout_constraintStart_toStartOf="@+id/guideline3" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/light_"
            android:textAllCaps="true"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@+id/textView19"
            app:layout_constraintTop_toBottomOf="@+id/txtHeatersCount" />

        <TextView
            android:id="@+id/txtLightCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="0"
            android:textAlignment="viewEnd"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView21"
            app:layout_constraintEnd_toEndOf="@+id/txtHeatersCount"
            app:layout_constraintStart_toStartOf="@+id/guideline3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>