<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.homeappdemo.ui.fragments.splash.SplashFragment"
        android:label=""
        tools:layout="@layout/fragment_splash">
        <argument
            android:name="showBar"
            android:defaultValue="false" />
        <argument
            android:name="showNav"
            android:defaultValue="false" />
        <action
            android:id="@+id/navigateToDeviceFragment"
            app:destination="@id/deviceFragment"
            app:enterAnim="@anim/slide_in_top"
            app:exitAnim="@anim/slide_out_left"
            app:launchSingleTop="true"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/deviceFragment"
        android:name="com.example.homeappdemo.ui.fragments.device.DeviceFragment"
        android:label="Home Monitor"
        tools:layout="@layout/fragment_device">
        <argument
            android:name="showNav"
            android:defaultValue="true" />
        <argument
            android:name="showBar"
            android:defaultValue="true" />

        <action
            android:id="@+id/navigateToChooseProductTypeDialogFragment"
            app:destination="@id/chooseProductTypeDialogFragment" />
        <action
            android:id="@+id/navigateToEditDeviceFragment"
            app:destination="@id/editDeviceFragment" />
    </fragment>

    <fragment
        android:id="@+id/userProfileFragment"
        android:name="com.example.homeappdemo.ui.fragments.profile.UserProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_user_profile">
        <argument
            android:name="showNav"
            android:defaultValue="true"
            app:enterAnim="@anim/slide_in_from_left"
            app:exitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/navigateToCreateProfileFragment"
            app:destination="@id/createProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.homeappdemo.ui.fragments.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings">
        <argument
            android:name="showBar"
            android:defaultValue="true" />
    </fragment>

    <fragment
        android:id="@+id/createProfileFragment"
        android:name="com.example.homeappdemo.ui.fragments.profile.CreateProfileFragment"
        android:label="@string/create_account"
        tools:layout="@layout/fragment_create_profile">
        <argument
            android:name="showBar"
            android:defaultValue="true" />
        <action
            android:id="@+id/navigateToDatePickerBottomSheetFragment"
            app:destination="@id/datePickerBottomSheetFragment" />
    </fragment>

    <dialog
        android:id="@+id/datePickerBottomSheetFragment"
        android:name="com.example.homeappdemo.ui.general.DatePickerBottomSheetFragment"
        android:label="Create Account"
        tools:layout="@layout/fragment_date_picker_bottom_sheet">

        <argument
            android:name="date"
            app:argType="long"
            app:nullable="false" />
    </dialog>

    <dialog
        android:id="@+id/chooseProductTypeDialogFragment"
        android:name="com.example.homeappdemo.ui.fragments.device.ChooseProductTypeDialogFragment"
        android:label="fragment_choose_product_type_dialog"
        tools:layout="@layout/fragment_choose_product_type_dialog">
        <action
            android:id="@+id/navigateToCreateDeviceFragment"
            app:destination="@id/createDeviceFragment" />
    </dialog>

    <fragment
        android:id="@+id/createDeviceFragment"
        android:name="com.example.homeappdemo.ui.fragments.device.CreateDeviceFragment"
        android:label="@string/create_device"
        tools:layout="@layout/fragment_create_device">
        <argument
            android:name="showBar"
            android:defaultValue="true" />
        <argument
            android:name="productType"
            app:argType="string"
            app:nullable="false" />

    </fragment>
    <fragment
        android:id="@+id/editDeviceFragment"
        android:name="com.example.homeappdemo.ui.fragments.device.EditDeviceFragment"
        android:label="@string/edit_device"
        tools:layout="@layout/fragment_edit_device">
        <argument
            android:name="showBar"
            android:defaultValue="true" />
        <argument
            android:name="device"
            app:argType="com.example.homeappdemo.model.device.DeviceModel"
            app:nullable="false" />

    </fragment>


</navigation>